--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
+<!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
+    <link rel="stylesheet" href="style.css" />
+    <title>Simple interest calculator</title>
+  </head>
+  <body onload="finishPage()">
+    <div class="maindiv">
+      <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+      Amount <input type="number" id="principal" /> <br /><br />
+      Interest Rate
+      <input
+        type="range"
+        min="1"
+        max="20"
+        step="0.25"
+        value="10.25"
+        id="rate"
+        onchange="slider()"
+      />
+      <span id="rateLabel">10.25%</span>
+      <br /><br />
+      No. of Years
+      <select id="years"></select>
+      <br />
+      <span id="result"></span>
+      <br />
 
-        <button onclick="compute()">Compute</button>
-    </body>
+      <button onclick="compute()">Compute Interest</button>
+      <span id="results"></span>
+      <br /><br />
+      <footer>&#169; This Calculator belongs to Prakul T. Singh</footer>
+    </div>
+  </body>
 </html>
